[metadata]
name = pyarbtools
version = 2022.04.01
author = Morgan Allison
author_email = morgan.allison@keysight.com
description = PyArbTools provides waveform creation and remote instrument control capabilities for Keysight signal generators.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/morgan-at-keysight/pyarbtools
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir = 
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    socketscpi
    matplotlib

[options.package_data]
    pyarbtools = favicon.ico

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, .git, __pycache__, build, setup.py
